style.css
@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700,800|Quicksand:400,700');
@import url('https://fonts.googleapis.com/css?family=Montserrat:400');

* {
  margin: 0;
  padding: 0;
  color: #fff;
}

a {
  text-decoration: none;
}

p {
  font-family: "Open Sans", sans-serif;
  width: 100%;
  line-height: 1.6em;
}

h1 {
  font-family: "Montserrat", sans-serif;
  font-weight: 700;
  font-size: 3em;
  width: 100%;
  margin-bottom: 10px;
}

#everything {
  width: 100%;
  height: auto;
}

#header-outer {
  width: 100vw;
  height: 4.5em;
  margin-top: -4.5em;
  background-color: #fff;
  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
  position: fixed;
  z-index: 1000;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

#header-outer * {
  color: #1794c9;
  font-family: "Montserrat", sans-serif;
  font-weight: 700;
}

#header-outer a {
  transition: color 0.25s;
}

#header-outer a:hover {
  color: #1379A4;
}

#logo {
  float: left;
  width: auto;
  font-size: 2.5em;
  margin-left: 10px;
}

#links-outer {
  display: inline-block;
  width: 50vw;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  margin-right: 10px;
}

#links-outer > a {
  font-size: 1.5em;
  margin: 1em;
}

.container {
  width: 95vw;
  height: 24em;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 1em 2.5vw 1em 2.5vw;
}

.main-container {
  height: 36em;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  background-color: #1794c9;
  margin-top: 4.5em;
}

.main-container > div.center {
  height: auto;
  width: 90%;
  margin-left: auto;
  margin-right: auto;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
  margin-top: -2em;
}

.main-container > div.center > p {
  text-align: left;
  margin: 2.5em;
  width: 40%;
}

#video {
  margin: 2.5em;
  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
}

.main-container > div.center > * {
  text-align: center;
}

#title {
  font-size: 5em;
  text-align: center;
  margin: 0 !important;
}

#subtitle {
  text-align: center;
  width: 75%;
}

.right-img, .left-img {
  width: 40vw;
  height: auto;
  align-self: flex-end;
  margin-bottom: -1em;
}

.earth {
  align-self: center;
}

.container-2 {
  background-color: #0F5E80;
}
.container-3 {
  background-color: #0D516E;
}
.container-4 {
  background-color: #0B435B;
}

.footer {
  background-color: #041B25;
  width: 95vw;
  height: 4em;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 1em 2.5vw 1em 2.5vw;
}

.footer > div > p, .footer > div > a {
  opacity: 0.6;
  font-family: "Montserrat", sans-serif;
  font-weight: 900;
  display: block;
  margin: 0;
}

.footer > div > a {
  opacity: 0.5;
  transition: opacity 0.25s;
}

.footer > div > a:hover {
  opacity: 0.7;
}

#footer-right > * {
  text-align: center;
}

#footer-link {
  opacity: 0.5;
  height: 75%;
  transition: opacity 0.25s;
}

#footer-link:hover {
  opacity: 0.7;
}

#footer-logo {
  height: 100%;
  width: auto;
}

